# HealthMCP

./: .coverage  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  server.py
docs/: architecture.md
src/apache_health_mcp/: parser.py  protocol.py  schemas.py  tools.py
tests/: fixtures.py  test_mcp_integration.py  test_parser.py  test_protocol.py  test_tools.py
